#1247: Documentar la propietat de verificació de firmes a l'Arxiu
Task-Url: #1247

--- a/doc/resources/config/global.properties
+++ b/doc/resources/config/global.properties
@@ -185,3 +185,7 @@ app.docstore.alfresco.apiurl=http://localhost:8080/alfresco/api
 app.docstore.alfresco.user=admin
 app.docstore.alfresco.pass=admin
 app.docstore.alfresco.basedir=/Helium
+
+
+# URL base per a la verificació de firmes
+app.arxiu.verificacio.baseurl=https://dev.caib.es/concsv/view.xhtml?hash=
