--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -313,9 +313,9 @@
 	</build>
 	<repositories>
 		<repository>
-			<id>maven-repos</id>
-			<name>GitHub GovernIB Maven Repository</name>
-			<url>http://GovernIB.github.io/maven/maven/</url>
-		</repository>
+            <id>github-governib-maven-repos</id>
+            <name>GitHub GovernIB Maven Repository</name>
+        	<url>https://governib.github.io/maven/maven/</url>
+        </repository>
 	</repositories>
 </project>
