--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -804,9 +804,9 @@
 	</build>
 	<repositories>
 		<repository>
-			<id>github-governib-maven-repos</id>
-			<name>GitHub GovernIB Maven Repository</name>
-			<url>http://GovernIB.github.io/maven/maven/</url>
-		</repository>
+            <id>github-governib-maven-repos</id>
+            <name>GitHub GovernIB Maven Repository</name>
+            <url>https://governib.github.io/maven/maven/</url>
+        </repository>
 	</repositories>
 </project>
