#1279: Problemes compilació dependència es.caib.portafib:portafib-ws-api
Task-Url: #1279

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>es.caib.portafib</groupId>
 			<artifactId>portafib-ws-api</artifactId>
-			<version>${portafib.version}</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
