#1310: Implementar el WS PortaFIB Callback 1.0
Task-Url: https://github.com/GovernIB/helium/issues/1310

--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -365,9 +365,15 @@
 	</build>
 	<repositories>
 		<repository>
+			<id>github_governib_maven</id>
+			<name>GitHub GovernIB Maven Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+		<repository>
              <id>github-governib-maven-repos</id>
              <name>GitHub GovernIB Maven Repository</name>
              <url>https://governib.github.io/maven/maven/</url>
         </repository>
+        
 	</repositories>
 </project>
