--- a/helium-core-v26/pom.xml
+++ b/helium-core-v26/pom.xml
@@ -230,6 +230,16 @@
 			<version>2.1.7</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>bcprov-jdk14</artifactId>
+					<groupId>bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcprov-jdk14</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!--dependency>
 			<groupId>asm</groupId>
