--- a/helium-core-v26/pom.xml
+++ b/helium-core-v26/pom.xml
@@ -239,6 +239,14 @@
 					<artifactId>bcprov-jdk14</artifactId>
 					<groupId>org.bouncycastle</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>bctsp-jdk14</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcmail-jdk14</artifactId>
+					<groupId>bouncycastle</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<!--dependency>
