--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -189,15 +189,19 @@
 			<version>2.1.7</version>
 			<exclusions>
 				<exclusion>
-					<artifactId>bcprov-jdk14</artifactId>
+					<artifactId>bctsp-jdk14</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcmail-jdk14</artifactId>
 					<groupId>bouncycastle</groupId>
 				</exclusion>
 				<exclusion>
 					<artifactId>bcprov-jdk14</artifactId>
-					<groupId>org.bouncycastle</groupId>
+					<groupId>bouncycastle</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+ 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
@@ -293,6 +297,10 @@
 					<artifactId>bcprov-jdk15</artifactId>
 					<groupId>org.bouncycastle</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>xmlsec</artifactId>
+					<groupId>org.apache.santuario</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -377,30 +385,7 @@
 			<artifactId>helium-plugin-api</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
-		<!-- validate-signature plugin 2.0.0
-		<dependency>
-			<groupId>org.fundaciobit.pluginsib.validatesignature</groupId>
-			<artifactId>pluginsib-validatesignature-api</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.fundaciobit.pluginsib.validatesignature</groupId>
-			<artifactId>pluginsib-validatesignature-afirmacxf</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-		 -->
-		<!--
-		<dependency>
-			<groupId>xml-apis</groupId>
-			<artifactId>xml-apis</artifactId>
-			<version>1.4.01</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk16</artifactId>
-			<version>${bouncycastle.version}</version>
-		</dependency>
-		-->
+
 		<!--  plugin-validatesignature-afirmacxf 1.0.2 -->
 		<dependency>
 			<groupId>org.fundaciobit.plugins</groupId>
@@ -464,15 +449,32 @@
 					<groupId>org.bouncycastle</groupId>
 					<artifactId>bcprov-jdk15</artifactId>
 				</exclusion>
+				<exclusion>
+					<artifactId>bcmail-jdk16</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcprov-jdk16</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bctsp-jdk16</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- xmlsec 
-		<dependency>
+		<!-- xml sec. Inclosa també al pom.xml de l'EAR per evitar problemes en JBoss -->
+ 		<dependency>
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
-			<version>1.4.4</version>
+			<version>1.4.3</version>
+		</dependency>		
+		<!-- bouncy castle -->
+		<dependency>
+			<artifactId>bctsp-jdk15</artifactId>
+			<groupId>org.bouncycastle</groupId>
+			<version>1.45</version>
 		</dependency>
-		-->		
 	</dependencies>
 	<build>
 		<plugins>
@@ -498,6 +500,5 @@
              <name>GitHub GovernIB Maven Repository</name>
              <url>https://governib.github.io/maven/maven/</url>
         </repository>
-        
 	</repositories>
 </project>
