--- a/helium-ear/pom.xml
+++ b/helium-ear/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.1</version>
 		</dependency>
+ 		<dependency>
+			<groupId>org.apache.santuario</groupId>
+			<artifactId>xmlsec</artifactId>
+			<version>1.4.3</version>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
