--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -56,18 +56,18 @@
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-frontend-jaxws</artifactId>
-		    <version>2.7.8</version>
+		    <version>${cxf.version}</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-transports-http</artifactId>
-		    <version>2.7.8</version>
+		    <version>${cxf.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-transports-http-jetty</artifactId>
-		    <version>2.7.8</version>
+		    <version>${cxf.version}</version>
 		</dependency>		
 		
 		<!-- Helium -->
