#1321 Proves validació versió 3.2.107_rc_1 herència DES
Task url: https://github.com/GovernIB/helium/issues/1321

--- a/helium-selenium/src/test/resources/test-herencia.properties
+++ b/helium-selenium/src/test/resources/test-herencia.properties
@@ -9,15 +9,15 @@ app.base.url=http://10.35.3.110:8080/helium
 test.base.url.inici.seycon=false
 
 # Entorn de proves
-test.entorn.codi=dml
-test.entorn.titol=DML
+test.entorn.codi=HERENCIA
+test.entorn.titol=Herencia
 
 # Usuari de proves
-test.usuari.codi=josepg
-test.usuari.password=josepg15
+test.usuari.codi=admin
+test.usuari.password=admin
 
 # Adreça base de la aplicació Helium
-test.base.url=http://josepg:josepg15@10.35.3.110:8080/helium/v3
+test.base.url=http://admin:admin@10.35.3.110:8080/helium/v3
 
 # Tipus d'expedient per a les proves
 test.tipus.expedient.codi=te_fill_1
