--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -481,6 +481,11 @@
 			<artifactId>distribucio-ws-client</artifactId>
 			<version>0.9</version>
 		</dependency>
+		<dependency>
+			<groupId>es.caib.distribucio</groupId>
+			<artifactId>distribucio-backoffice-utils</artifactId>
+			<version>0.9</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
