#1359 Canviar el handler RegistreSortidaRegWeb3Handler

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -207,13 +207,13 @@
 		<dependency>
             <groupId>es.caib.regweb3</groupId>
             <artifactId>regweb3-utils</artifactId>
-            <version>3.0.8</version>
+            <version>${regweb3.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>es.caib.regweb3</groupId>
             <artifactId>regweb3-ws-api</artifactId>
-            <version>3.0.8</version>
+            <version>${regweb3.version}</version>
             <scope>compile</scope>
         </dependency>
 		<dependency>
@@ -244,27 +244,7 @@
 			<artifactId>helium-core-common</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
-		
-		<dependency>
-            <groupId>es.caib.regweb3</groupId>
-            <artifactId>regweb3-utils</artifactId>
-            <version>3.0.8</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>es.caib.regweb3</groupId>
-            <artifactId>regweb3-ws-api</artifactId>
-            <version>3.0.8</version>
-            <scope>compile</scope>
-        </dependency>
-        
-		<dependency>
-		    <groupId>wsdl4j</groupId>
-		    <artifactId>wsdl4j</artifactId>
-		    <version>1.6.2</version>
-		</dependency>
-        
+		        
         <dependency>
 			<groupId>es.caib.notib</groupId>
 			<artifactId>notib-client</artifactId>
@@ -321,5 +301,6 @@
              <name>GitHub GovernIB Maven Repository</name>
              <url>https://governib.github.io/maven/maven/</url>
         </repository>
+        
 	</repositories>
 </project>
