--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<portafib.version>1.1.0</portafib.version>
 		<slf4j.version>1.5.8</slf4j.version>
 		<jackson.version>2.7.0</jackson.version>
+		<regweb3.version>3.1.2</regweb3.version>
 	</properties>
 	<modules>
 		<module>helium-core-api</module>
