#1335 Helium com a backoffice de Distribucio
Documentació atualitzada

--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -207,3 +207,11 @@ app.docstore.alfresco.basedir=/Helium
 app.arxiu.verificacio.baseurl=https://dev.caib.es/concsv/view.xhtml?hash=
 
 
+##############################
+# Integració amb DISTRIBUCIO #
+##############################
+ 
+net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev.caib.es/distribucio/ws/backofficeIntegracio
+# Usuari amb el rol DIS_BACKWS
+net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.username=usuari
+net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.password=******
