--- a/helium-selenium/src/test/resources/test-dev.properties
+++ b/helium-selenium/src/test/resources/test-dev.properties
@@ -3,21 +3,21 @@
 ################################
 
 # URL d'Helium
-app.base.url=http://10.35.3.110:8080/helium
+app.base.url=http://10.35.3.231:8080/helium
 
 # Autentiació
 test.base.url.inici.seycon=false
 
 # Entorn de proves
-test.entorn.codi=josepg
-test.entorn.titol=Josep G
+test.entorn.codi=Test
+test.entorn.titol=Test
 
 # Usuari de proves
-test.usuari.codi=josepg
-test.usuari.password=josepg15
+test.usuari.codi=admin
+test.usuari.password=admin
 
 # Adreça base de la aplicació Helium
-test.base.url=http://josepg:josepg15@10.35.3.110:8080/helium/v3
+test.base.url=http://admin:admin@10.35.3.231:8080/helium/v3
 
 # Tipus d'expedient per a les proves
 test.tipus.expedient.codi=test
@@ -42,9 +42,9 @@ app.forms.embedded.port=9080
 ####
 # WS per tramitació externa
 ####
-app.tramitacio.url=http://10.35.3.110:8080/helium/ws/TramitacioService
+app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
 
 ####
 # Portasignatures
 ####
-app.portasignatures.plugin.url.callback=http://10.35.3.110:8080/helium/services/MCGDWS
+app.portasignatures.plugin.url.callback=http://10.35.3.231:8080/helium/services/MCGDWS
