--- a/doc/resources/properties/updates/helium_update_3.2.109.properties
+++ b/doc/resources/properties/updates/helium_update_3.2.109.properties
@@ -12,3 +12,13 @@ net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev
 # Usuari amb el rol DIS_BACKWS
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.username=usuari
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.password=******
+
+####
+# Integració amb unitats orgàniques Dir3
+####
+app.unitats.organiques.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
+app.unitats.organiques.dir3.plugin.service.url=http://dev.caib.es/dir3caib/ws/Dir3CaibObtenerUnidades
+app.unitats.organiques.dir3.plugin.service.username=usuari
+app.unitats.organiques.dir3.plugin.service.password=******
+app.unitats.organiques.dir3.plugin.service.log.actiu=false
+app.unitats.organiques.dir3.plugin.service.timeout=120
