#1432 Poder diferenciar entorn segons el color de la capçalera
Task-url: https://github.com/GovernIB/helium/issues/1432

--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -2,6 +2,11 @@
 app.base.url=http://localhost:8080/helium
 # Text del copyright
 app.copyright.text=&copy; 2009 Govern de les Illes Balears
+# Opcions de visualització de la capçalera
+# Color de fons de la capçalera. Per defecte app.capsalera.color.fons=#ff9523 
+app.capsalera.color.fons=
+# Color de la lletra de la capçalera. Per defecte app.capsalera.color.lletra=white 
+app.capsalera.color.lletra=
 # Tamany màxim permès pels arxius pujats mitjançant HTTP (en bytes)
 app.fileupload.maxsize=1000000
 # Per a habilitar/deshabilitar el botó de logout (true,false)
