#1461 Corregir importació TE per importar info DP
Task-url: https://github.com/GovernIB/helium/issues/1461

--- a/helium-selenium/src/test/resources/test-pre.properties
+++ b/helium-selenium/src/test/resources/test-pre.properties
@@ -13,11 +13,11 @@ test.entorn.codi=limit2
 test.entorn.titol=Entorn de test per Limit 2
 
 # Usuari de proves
-test.usuari.codi=e43110511r
-test.usuari.password=limit6789
+test.usuari.codi=u101334
+test.usuari.password=****
 
 # Adreça base de la aplicació Helium
-test.base.url=https://e43110511r:limit6789@proves.caib.es/helium/v3
+test.base.url=https://u101334:****@proves.caib.es/helium/v3
 
 # Tipus d'expedient per a les proves
 test.tipus.expedient.codi=test2
@@ -48,4 +48,4 @@ app.tramitacio.url=https://proves.caib.es/helium/ws/TramitacioService
 # Portasignatures
 ####
 app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
-app.portasignatures.web.url=https://e43110511r:limit5678@proves.caib.es/portafib
+app.portasignatures.web.url=https://u101334:****@proves.caib.es/portafib
