--- a/helium-selenium/src/test/resources/test.properties
+++ b/helium-selenium/src/test/resources/test.properties
@@ -6,7 +6,7 @@
 # entorn= o entorn=pre per a l'entorn de pre producció o test,
 # entorn=dev per desenvolupament
 # entorn=pre per pre producció o test
-entorn=dev
+entorn=pre
 
 # Selecció del browser
 test.browser=firefox
@@ -16,7 +16,7 @@ webdriver.firefox.binary=C:\\Program Files (x86)\\Mozilla Firefox 46.0\\firefox.
 
 # Ruta al truststore.jdk amb les claus de confiança per poder provar WS per https. Si es deixa buit 
 #test.truststore=C:\\temp\\truststore.jks
-test.truststore=
+test.truststore=C:\\temp\\truststore.jks
 
 # Esborrar els expedients de test creats en acabar el test
 test.expedient.esborrar=false
