#1456 Nou botó per reemprendre execucions massives cancel·lades

--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -50,7 +50,8 @@ app.hibernate.hbm2ddl.auto=update
 # Tipus de directory pel lucene (fsDirectory, jdbcDirectory)
 app.lucene.directory=jdbcDirectory
 # Paràmetres pel fsDirectory
-app.lucene.fs.basedir=file:///tmp/helium/lucene
+#app.lucene.fs.basedir=file:///tmp/helium/lucene
+app.lucene.fs.basedir=file://c:/tmp/helium/lucene
 # Paràmetres pel jdbcDirectory
 app.lucene.jdbc.dialect=org.apache.lucene.store.jdbc.dialect.OracleDialect
 
