--- a/microservices/helium-eureka/pom.xml
+++ b/microservices/helium-eureka/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>es.caib.helium.eureka</groupId>
+    <groupId>es.caib.helium</groupId>
     <artifactId>helium-eureka</artifactId>
     <version>1.0.0</version>
     <name>helium-eureka</name>
