--- a/microservices/helium-gateway/pom.xml
+++ b/microservices/helium-gateway/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>es.caib.helium.gateway</groupId>
+    <groupId>es.caib.helium</groupId>
     <artifactId>helium-gateway</artifactId>
     <version>1.0.0</version>
     <name>helium-gateway</name>
