Securització + ELK del servei

--- a/microservices/helium-eureka/src/main/resources/application.properties
+++ b/microservices/helium-eureka/src/main/resources/application.properties
@@ -7,3 +7,7 @@ eureka.client.fetch-registry=false
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
+
+spring.security.user.name=helium
+# TODO: passar-ho com env property
+spring.security.user.password=H3lEurek4
