Securització + ELK del servei

--- a/microservices/helium-gateway/src/main/resources/application-spring-cloud.yml
+++ b/microservices/helium-gateway/src/main/resources/application-spring-cloud.yml
@@ -1,8 +1,8 @@
 eureka:
   client:
     register-with-eureka: false
-#    service-url:
-#      defaultZone: http://netflix:eureka@localhost:8761/eureka/
+    service-url:
+      defaultZone: http://helium:H3lEurek4@localhost:8761/eureka
 
 spring:
   cloud:
