--- a/microservices/heliium-config-server/src/main/resources/bootstrap.properties
+++ b/microservices/heliium-config-server/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 # TODO: passar-ho com env property
 encrypt.key=H3liumSecretKey
+
+eureka.client.service-url.defaultZone=http://helium:H3lEurek4@localhost:8761/eureka
