--- a/microservices/helium-domini-service/src/main/resources/static/heliumms-domini-service-1.0.0-resolved.yaml
+++ b/microservices/helium-domini-service/src/main/resources/static/heliumms-domini-service-1.0.0-resolved.yaml
@@ -16,7 +16,7 @@ tags:
 - name: Consulta
   description: Operacions disponibles per tots els usuaris
 paths:
-  /api/v1/entorns/{entornId}/dominis:
+  /api/v1/dominis:
     get:
       tags:
       - Disseny
@@ -32,11 +32,11 @@ paths:
       operationId: listDominisV1
       parameters:
       - name: entornId
-        in: path
+        in: query
         description: Identificador de l'entorn
         required: true
-        style: simple
-        explode: false
+        style: form
+        explode: true
         schema:
           type: integer
           format: int64
@@ -113,16 +113,6 @@ paths:
       summary: Crea un nou domini
       description: Afegiex un nou domini al sistema
       operationId: createDominiV1
-      parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       requestBody:
         description: Domini a crear
         content:
@@ -146,7 +136,7 @@ paths:
           description: Bad request
         "409":
           description: Conflicte. Ja existeix el domini
-  /api/v1/entorns/{entornId}/dominis/{dominiId}:
+  /api/v1/dominis/{dominiId}:
     get:
       tags:
       - Disseny
@@ -155,15 +145,6 @@ paths:
       description: Retorna les dades del domini amb l'identificador informat al paràmetre `dominiId`
       operationId: getDominiV1
       parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       - name: dominiId
         in: path
         description: Identificador del domini
@@ -189,15 +170,6 @@ paths:
       description: Modifica el domini amb l'identificador passat al paràmetre `dominiId`, amb les totes dades de l'objecte Domini passat al body de la petició
       operationId: updateDominiV1
       parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       - name: dominiId
         in: path
         description: Identificador del domini
@@ -227,15 +199,6 @@ paths:
       description: Elimina el domini amb l'identificador passat al paràmetre `dominiId`
       operationId: deleteDominiV1
       parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       - name: dominiId
         in: path
         description: Identificador del domini
@@ -257,15 +220,6 @@ paths:
       description: "Modifica els camps del domini amb l'identificador passat al paràmetre `dominiId`, amb els camps de l'objecte Domini passat al body de la petició.  \nNomés modifica els camps informats en l'objecte. Els camps no inclosos en l'objecte no seran modificats.\n"
       operationId: patchDominiV1
       parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       - name: dominiId
         in: path
         description: Identificador del domini
@@ -288,7 +242,7 @@ paths:
           description: Not found
         "409":
           description: Conflicte
-  /api/v1/entorns/{entornId}/dominis/{dominiId}/resultats:
+  /api/v1/dominis/{dominiId}/resultats:
     get:
       tags:
       - Consulta
@@ -296,15 +250,6 @@ paths:
       description: "Realitza la consulta del domini amb l'identificador passat al paràmetre `dominiId`.  \nPer a realitzar la consulta utilitza la configuració del domini, juntament amb els paràmetres passats.  \nEls paràmetres es passaran com un mapa amb la clau de tipus string, i un valor de tipus objecte\n"
       operationId: consultaDominiV1
       parameters:
-      - name: entornId
-        in: path
-        description: Identificador de l'entorn
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
       - name: dominiId
         in: path
         description: Identificador del domini
@@ -341,6 +286,127 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResultatDomini'
+  /api/v1/entorn/{entornId}/dominis:
+    get:
+      tags:
+      - Consulta
+      summary: Consulta un domini
+      description: |
+        Obté una pàgina de la cerca dels **dominis** d'un entorn.
+
+        La cerca pot rebre paràmetres per
+        - ordenar
+        - paginar
+        - filtrar (utilitzant sintaxi rsql)
+
+        No té en compte la herència
+      operationId: llistaDominiByEntorn
+      parameters:
+      - name: entornId
+        in: path
+        description: Identificador de l'entorn
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      - name: filtre
+        in: query
+        description: cadena amb format rsql per a definir el filtre a aplicar a la consulta
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: page
+        in: query
+        description: número de pagina a retornar en cas de desitjar paginació
+        required: false
+        style: form
+        explode: true
+        schema:
+          minimum: 0
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        description: mida de la pàgina a retornat en cas de desitjar paginació
+        required: false
+        style: form
+        explode: true
+        schema:
+          minimum: 0
+          type: integer
+          format: int32
+          default: 25
+      - name: sort
+        in: query
+        description: ordre a aplicar a la consulta
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DominiPagedList'
+        "204":
+          description: No content
+        "400":
+          description: Bad input parameter
+  /api/v1/entorn/{entornId}/dominis/{codi}:
+    get:
+      tags:
+      - Consulta
+      summary: Consulta un domini d'un tipus d'expedient
+      description: |
+        Obté el domini de tipus d'expedient donat el tipus d'expedient al que pertany, i el seu codi.
+        En cas d'informar el tipus d'expedient pare es tindrà en compte la herència
+      operationId: getDominiByEntornAndCodi
+      parameters:
+      - name: entornId
+        in: path
+        description: Identificador de l'entorn
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      - name: codi
+        in: path
+        description: Codi del domini
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: expedientTipusPareId
+        in: query
+        description: Identificador del tipus d'expedient pare al que pertany el domini (en cas d\'herència)
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Domini'
+        "204":
+          description: No content
+        "400":
+          description: Bad input parameter
   /api/v1/expedientTipus/{expedientTipusId}/dominis:
     get:
       tags:
@@ -353,6 +419,8 @@ paths:
         - ordenar
         - paginar
         - filtrar (utilitzant sintaxi rsql)
+
+        No té en compte la herència
       operationId: llistaDominiByExpedientTipus
       parameters:
       - name: expedientTipusId
@@ -658,6 +726,16 @@ components:
       required: true
       style: simple
       explode: false
+      schema:
+        type: integer
+        format: int64
+    EntornParam:
+      name: entornId
+      in: query
+      description: Identificador de l'entorn
+      required: true
+      style: form
+      explode: true
       schema:
         type: integer
         format: int64
