--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -389,14 +389,20 @@
 
 		<!--  plugin-validatesignature-afirmacxf 1.0.2 -->
 		<dependency>
-			<groupId>org.fundaciobit.plugins</groupId>
-			<artifactId>plugin-validatesignature-api</artifactId>
-			<version>1.0.0</version>
+<!-- 			<groupId>org.fundaciobit.plugins</groupId> -->
+<!-- 			<artifactId>plugin-validatesignature-api</artifactId> -->
+<!-- 			<version>1.0.0</version> -->
+			<groupId>org.fundaciobit.pluginsib.validatesignature</groupId>
+			<artifactId>pluginsib-validatesignature-api</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.fundaciobit.plugins</groupId>
-			<artifactId>plugin-validatesignature-afirmacxf</artifactId>
-			<version>1.0.1</version>
+<!-- 			<groupId>org.fundaciobit.plugins</groupId> -->
+<!-- 			<artifactId>plugin-validatesignature-afirmacxf</artifactId> -->
+<!-- 			<version>1.0.1</version> -->
+			<groupId>org.fundaciobit.pluginsib.validatesignature</groupId>
+			<artifactId>pluginsib-validatesignature-afirmacxf</artifactId>
+			<version>2.0.5</version>
 			<exclusions>
 				<exclusion>
 					<groupId>xerces</groupId>
