Finalitzar implementació de dominis + tests

--- a/microservices/helium-domini-service/src/main/resources/application-localdb.properties
+++ b/microservices/helium-domini-service/src/main/resources/application-localdb.properties
@@ -1,7 +1,7 @@
 # OracleDB connection settings
 spring.datasource.url=jdbc:oracle:thin:@//localhost:49161/xe
-spring.datasource.username=helium
-spring.datasource.password=helium
+spring.datasource.username=hel_domini
+spring.datasource.password=hel_domini
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # HikariCP settings
