--- a/microservices/helium-domini-service/src/main/resources/application.properties
+++ b/microservices/helium-domini-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=helium-domini-service
 server.port=8082
 
 # URL on es troba Helium
-es.caib.helium.domini-intern-service-host=http://localhost:8080/
+es.caib.helium.domini.intern.service.host=http://localhost:8080/helium/ws/DominiIntern
 es.caib.helium.domini.intern.user=helium
 es.caib.helium.domini.intern.password=H3liumSecr3t
 
