--- a/microservices/helium-domini-service/src/main/docker/Dockerfile
+++ b/microservices/helium-domini-service/src/main/docker/Dockerfile
@@ -14,4 +14,4 @@ COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher", "-Doracle.jdbc.timezoneAsRegion=false"]
