#1481 Crear microservei de dades #1486 Implementar mètodes de gestió i consulta de dades

--- a/microservices/helium-gateway/src/main/resources/application-compose.yml
+++ b/microservices/helium-gateway/src/main/resources/application-compose.yml
@@ -23,3 +23,8 @@ spring:
         uri: lb://helium-domini-service
         predicates:
           - Path=/api/v1/dominis/**
+          
+      - id: helium-dada-service
+        uri: lb://helium-dada-service
+        predicates:
+          -Path=/api/v1/dades/**
