--- a/microservices/helium-dada-service/src/main/resources/bootstrap-spring-cloud.properties
+++ b/microservices/helium-dada-service/src/main/resources/bootstrap-spring-cloud.properties
@@ -5,5 +5,6 @@ spring.cloud.config.username=helium
 spring.cloud.config.password=H3lConf1g
 spring.cloud.config.fail-fast=true
 
-eureka.client.service-url.defaultZone=http://helium:H3lEurek4@helium-eureka:8761/eureka
-eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://helium:H3lEurek4@localhost:8761/eureka
+
+
