#1488 Integrar Helium amb microservei de dominis
- Nou projecte helium-ms per integrar Helium amb els micro serveis.
- Generació de classes pel client RestTemplate
- Pas a jersey

--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -387,6 +387,12 @@
 			<version>${helium.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-ms</artifactId>
+			<version>${helium.version}</version>
+		</dependency>
+
 		<!--  plugin-validatesignature-afirmacxf 1.0.2 -->
 		<dependency>
 			<groupId>org.fundaciobit.plugins</groupId>
