--- a/microservices/helium-dada-service/src/main/resources/application.properties
+++ b/microservices/helium-dada-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=helium-dada-service
 server.port=8083
-server.error.include-stacktrace=never
+#server.error.include-stacktrace=never
+
