#1486 Implementar mètodes de gestió i consulta de dades

--- a/microservices/helium-dada-service/src/main/resources/application-local.properties
+++ b/microservices/helium-dada-service/src/main/resources/application-local.properties
@@ -7,12 +7,12 @@ spring.cloud.discovery.enabled=false
 # MongoDB connection settings
 #spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
 #spring.datasource.url=jdbc:mongo:thin:@//localhost:27017/hel_dada
-#spring.data.mongodb.uri=mongodb://localhost:27017/hel_dada
-#spring.data.mongodb.database=hel_dada
+spring.data.mongodb.uri=mongodb://localhost:30001/hel_dada
+spring.data.mongodb.database=hel_dada
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
+#spring.data.mongodb.port=30001
 #spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=hel_dada
 
 #spring.datasource.username=hel_dada
 #spring.datasource.password=hel_dada
